--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ tr td:first-child {
     cursor: pointer;
 }
 
-tr:nth-child(even) {
+#table-total tr:nth-child(even) {
     background-color: white;
     color: blue;
 }
@@ -116,7 +116,7 @@ tr:nth-child(even) {
     width: 30%;
     height: 35px;
     font-size: 15px;
-    border: 2px solid rgb(193,193,193);
+    border: 2px solid rgb(193, 193, 193);
     border-radius: 5px;
 }
 
@@ -147,4 +147,58 @@ select:focus,
 textarea:focus,
 button:focus {
     outline: none;
+}
+
+.add-record {
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    display: inline;
+}
+
+.form {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 250px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.form-content {
+    background-color: #fefefe;
+    border: 1px solid #888;
+    border-radius: 15px;
+    padding: 20px;
+    margin: auto;
+    width: 30%;
+}
+
+.input-add {
+    text-align: left;
+    margin-left: auto;
+}
+
+#table-add {
+    box-shadow: none;
+}
+
+#table-add tr {
+    background-color: white;
+    font-family: inherit;
+}
+
+.in {
+    height: 30px;
+    width: 400px;
+    margin-left: 15px;
+}
+
+#error {
+    display: none;
+    color: red;
+    font-weight: bold;
 }
